# agentic-security

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  ascii_art.py  config.yml  dependency-check-report.json  docker-compose.yml  fix_cycle.py  install.sh  pyproject.toml  requirements-slack.txt  requirements.txt  run_pipeline.sh  security_fixes_20241103_163132.json  security_fixes_20241103_163226.json  security_pipeline.py  setup.py
.github/workflows/: security_pipeline.yml
docs/: README.md
docs/architecture/: README.md
docs/future/: README.md
docs/implementation/: README.md
docs/user-guide/: README.md
gui/: app copy.py  app.py  code_generator.py  config_handler.py  git_handler.py  github_handler.py  prompt_handler.py  report_generator.py  requirements.txt  security_handler.py  security_panel.py  shell_handler.py
gui copy/: code_generator.py  git_handler.py
gui copy 2/: app.py
gui copy 2/.streamlit/: config.toml
gui-bak/: app.py
gui-null2/: app.py  prompt_handler.py
gui/.streamlit/: config.toml
gui2/: __init__.py
gui2 copy/: requirements.txt
hackerone/: .coverage  .env.example  README.md  requirements.txt  sql_injection_report.md  submit_reports.py  test_submit_reports.py  weak_crypto_report.md
hackerone copy/: .env.example  SUBMISSION_GUIDE.md  command_injection_report.md  test_submit_reports.py  xss_report.md
hackerone copy/gui/: README.md  app.py  bounty_hunter.py  conftest.py  requirements.txt  run_tests.py  settings.py  test_app.py  utils.py
hackerone/gui/: app.py  bounty_hunter.py  config.py  pytest.ini  run.py  run_tests.sh  (+3 more)
security_reports/: security_report_20241103_153713.md  security_report_20241103_153949.md  security_report_20241103_174630.md  security_report_20241105_013427.md
testing_reports/: report_20241103-064743_auto_approve_mode.md
tests/: conftest.py  test_aider_integration.py  test_features.py  test_fix_cycle.py  test_security.py  test_security_pipeline.py  test_sql_injection_fixes.py  test_vulnerable_query.py
vs-extension/: install.sh  readme.md
(+32 files in other folders)
